# genie-flow-invoker

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
genie_flow_invoker/: __init__.py  codec.py  containers.py  doc_proc.py  factory.py
genie_flow_invoker/invoker/: __init__.py  api.py  neo4j.py  openai.py  verbatim.py  weaviate.py
tests/: test_codec.py  test_model.py  test_verbatim.py
