[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
"write_to" = "genie_flow_invoker/_version.py"

[tool.setuptools.package-dir]
genie_flow_invoker = "genie_flow_invoker"

[project]
name = "genie_flow_invoker"
authors = [
    { name = "Willem van Asperen", email = "willem.van.asperen@paconsulting.com"}
]
description = "Core classes for Genie Flow Invokers"
readme = "README.md"
requires-python = "~=3.11.0"
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies=[
    "loguru~=0.7.2",
    "openai~=1.28.1",
    "PyYAML~=6.0.1",
    "dependency-injector",
    "weaviate-client~=4.6.5",
    "neo4j~=5.22.0"
]
dynamic = ["version"]
